--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,5 +1,5 @@
 mountpoints:
   /:
-    url: "http://localhost:4502/bin/franklin.delivery/prasanna-shah/demo-xwalk/main"
+    url: "https://localhost:8443/bin/franklin.delivery/prasanna-shah/demo-xwalk/main"
     type: "markup"
     suffix: ".html"
